tests/enum/tenumitems.nim
discard """
  line: 7
  errormsg: "type mismatch"
"""

type a = enum b,c,d
a.items()


